--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.1.1",
     "moment": "^2.29.4",
     "vue": "^3.2.45"
